BUGFIX: Fix blurry insert panel

--- a/TYPO3.Neos/Resources/Private/Styles/Foundation/_mixins.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Foundation/_mixins.scss
@@ -24,6 +24,29 @@
   }
 }
 
+//Vendor Prefixes
+// --------
+@mixin flex() {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+
+@mixin flex-center() {
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+
 // Webkit-style focus
 // ------------------
 @mixin tab-focus() {
